--- a/index/01-Literature.Rmd
+++ b/index/01-Literature.Rmd
@@ -12,9 +12,9 @@ In this chapter I review the role of risk and uncertainty in [Risk and Uncertain
 
 ## Risk and Uncertainty {#risk-and-uncertainty}
 
-First of all, the uncertainty has been put inside a framework of irreversible investment, i.e., for future investment opportunities is cautious wait until the uncertainty levels have passed. Therefore, aggregate uncertainty shocks affect investments, labor and in general reducing the real activity [@bernanke:1983]. Moreover, @romer:1990 showed that consumers postpone their acquisition of durable goods in periods of high uncertainty. In addition, @bansyaro:2004 states that the uncertainty results in reduction of equity prices through the reduction of long-run growth in the economy.
+First of all, the uncertainty has been put inside a framework of irreversible investment, i.e., for future investment opportunities is cautious to wait until the uncertainty levels have passed. Therefore, aggregate uncertainty shocks affect investments, labor and in general reducing the real activity [@bernanke:1983]. Moreover, @romer:1990 showed that consumers postpone their acquisition of durable goods in periods of high uncertainty. In addition, @bansyaro:2004 declares that the uncertainty results in reduction of equity prices through the reduction of long-run growth in the economy.
 
-@bekahoerduca:2013 study the relationship between uncertainty and policy interventions. The authors concludes that uncertainty has a important role in the transmission of monetary policy mechanisms. This marks the question of if facing uncertainty requires considerable policy action or not.
+@bekahoerduca:2013 study the relationship between uncertainty and policy interventions. The authors concludes that uncertainty has an important role in the transmission of monetary policy mechanisms. This marks the question if facing uncertainty requires considerable policy action or not.
 
 ## History of indices construction {#history-of-indices-construction}
 
@@ -22,7 +22,7 @@ The DFM allows to resolve a classic problem in empirical macroeconomics, that is
 
 The first application of DFMs for monitoring the economy was the @stocwats:1991 experimental coincident index (XCI), which was active between May 1989 to December 2003. This index was the result from the Kalman filter estimate of one single factor among four monthly coincident indices: total nonfarm employment, the index of industrial production, real manufacturing and trade sales, and real personal income less transfers. @stocwats:1993 shown that in retrospective analysis,the XCI was successful in contemporaneous monitoring and in real-time detection of the recession of 1990 although only less that six months before the recession.
 
-After the start of using DFMs for index construction were estimated subsequent indices through state-space models. First, monthly real activity indices for US states [@cronclay:2005]---that are active from 2005. Second, the inclusion of mixed-frequency series to the XCI in @marimura:2003. Third, @aruodiebscot:2009 developed a mixed-frequency index for economic conditions so-called ADS. In contrast, recent studies has focus in large dimensional systems. @stocwats:1999 constructed the base for the Chicago Fed National Activity Index (CFNAI), that is the principal components estimate of the common factor in 85 real activity variables. Finally, a European Union real economy activity index---named EuroCOIN---based on 145 Euro-area real activity variables was developed by @alticrisfornlippvero:2010.
+After the start of using DFMs for index construction were estimated subsequent indices through state-space models. First, monthly real activity indices for US states [@cronclay:2005]---that are active from 2005. Second, the inclusion of mixed-frequency series to the XCI in @marimura:2003. Third, @aruodiebscot:2009 developed a mixed-frequency index for economic conditions so-called ADS. In contrast, recent studies has focused in large dimensional systems. @stocwats:1999 constructed the base for the Chicago Fed National Activity Index (CFNAI), that is the principal components estimate of the common factor in 85 real activity variables. Finally, an European Union real economy activity index---named EuroCOIN---based on 145 Euro-area real activity variables was developed by @alticrisfornlippvero:2010.
 
 ## Empirical Measures of Uncertainty {#empirical-measures-of-uncertainty}
 
