Added Python code for references

--- a/index/03-Data.Rmd
+++ b/index/03-Data.Rmd
@@ -29,7 +29,7 @@ All series of which units are measured in prices need to be given the $100 \time
 
 ### Detrend {#detrend}
 
-Since stochastic trends in economic time series variables pose problems for regression analysis (see @stocwats:1988 for additional discussion) it is necessary detrend the variables. For this was used the alternative methodology proposed by Hamilton [-@hamilton:2018] which avoid the shortcomings of Hodrick-Prescott (HP) filter, i.e., spurious dynamic relations that have no basis in the underlying data-generating process. The method consist of a regression of the variable at date $t + h$ on the twelve most recent values as of date $t$^[The original paper talks about quarterly data but because I use monthly data is necessary adjust the seasonally parameter to allow one year (as do the original paper with four quarters).]. The $h$ parameter is suggest to be a look-ahead period of two years which with monthly data are 24 months. In summary, the model fitted to each series is an autoregressive---AR(12)---model, dependent on $t + 24$ look-ahead. This is expressed more concretely by:
+Since stochastic trends in economic time series variables pose problems for regression analysis (see @stocwats:1988 for additional discussion) it is necessary detrend the variables. For this was used the alternative methodology proposed by Hamilton [-@hamilton:2018] which avoid the shortcomings of Hodrick-Prescott (HP) filter, i.e., spurious dynamic relations that have no basis in the underlying data-generating process. The method consist of a regression of the variable at date $t + h$ on the twelve most recent values as of date $t$^[The original paper talks about quarterly data but because I use monthly data is necessary adjust the seasonally parameter to allow one year (as do the original paper with four quarters).]. The $h$ parameter is suggest to be seen a period of two years in the future which with monthly data are 24 months. In summary, the model fitted to each series is an autoregressive---AR(12)---model, dependent on $t + 24$ look-ahead. This is expressed more concretely by:
 
 \begin{equation}
   y_{t+24} = \beta_{0} + \beta_{1}y_{t} + \beta_{2}y_{t - 1} + \cdots + \beta_{8}y_{t - 7} + v_{t + 24}
