--- a/index/index.Rmd
+++ b/index/index.Rmd
@@ -94,7 +94,7 @@ conflicted::conflict_prefer("lag", "dplyr")
 ```
 
 ```{bash xlsx2csv, eval = FALSE}
-# Transform uncertainty indexes from .xlsx to .csv
+# Transform uncertainty indices from .xlsx to .csv
 
 Rscript ./R/xlsx2csv.R
 ```
@@ -115,6 +115,6 @@ Uncertainty has been a primary concern in economics and sciences in general. Pri
 
 Although the interpretation of uncertainty developed by knight make him intractable in empirical studies, the current state of economics has move to an amenable concept. That is, the time-varying conditional second moment of the series under study which is related with structural shocks such as terrorist attacks, political events, economic crises, wars and credit crunches.
 
-From @dattlondsunbeltferriacojahaligiudroge:2017 it becomes clear that there are currently many measures of uncertainty and each of them is used by different market agents and professionals to measure uncertainty without being sure about which one is the best. Since each one captures different movements, it is necessary to build an index following the existing ones as a way to use as much information as possible. Henceforth, this document seek to make three main contributions to the study of uncertainty. First, I develop a non-asset-market uncertainty index^[The monthly index is available on the github repository of this document described in [Reproducibility].]---following as convention the name of the category under which @dattlondsunbeltferriacojahaligiudroge:2017 classifies a set of uncertainty indexes. This index has the property of summarize the common comovements share between the several uncertainty indexes developed so far in the literature, i.e., capture all the relevant information in the economy as a whole. Second, I analyze the dynamic relationship between uncertainty and real and financial variables in the economy. This allows understand the role of uncertainty inside the economy and the dynamics that rule there in. For instance, I document a negative relationship between uncertainty and real and financial variables. Finally, I show how the non-asset-market uncertainty index is more appealing theoretically because of less volatility---problem of newspapers-based uncertainty measures--- and less extreme correlation with recession dates---problem of econometric measures of uncertainty.
+From @dattlondsunbeltferriacojahaligiudroge:2017 it becomes clear that there are currently many measures of uncertainty and each of them is used by different market agents and professionals to measure uncertainty without being sure about which one is the best. Since each one captures different movements, it is necessary to build an index following the existing ones as a way to use as much information as possible. Henceforth, this document seek to make three main contributions to the study of uncertainty. First, I develop a non-asset-market uncertainty index^[The monthly index is available on: <https://github.com/jpadilse/Undergraduate_Thesis/tree/master/index/Data/Output/Non-Asset-Market.csv>]---following as convention the name of the category under which @dattlondsunbeltferriacojahaligiudroge:2017 classifies a set of uncertainty indices. This index has the property of summarize the common comovements share between the several uncertainty indices developed so far in the literature, i.e., capture all the relevant information in the economy as a whole. Second, I analyze the dynamic relationship between uncertainty and real and financial variables in the economy. This allows understand the role of uncertainty inside the economy and the dynamics that rule there in. For instance, I document a negative relationship between uncertainty and real and financial variables. Finally, I show how the non-asset-market uncertainty index is more appealing theoretically because of less volatility---problem of newspapers-based uncertainty measures---and less extreme correlation with recession dates---problem of econometric measures of uncertainty. This thesis is also available as a pdf^[PDF: <https://github.com/jpadilse/Undergraduate_Thesis/blob/master/index/_book/Thesis.pdf>] and a reproducible Rmarkdown document^[Rmarkdown: <https://github.com/jpadilse/Undergraduate_Thesis>].
 
 The rest of this document is organized as follows. First of all, I review theoretical and empirical studies of uncertainty in [Literature]. Second, I describe the methodology used to estimate the uncertainty index that is a approximate dynamic factor model in [Methodology]. Then, I present the data used and the transformations made to them in [Data]. Lastly, I show the main effects in [Results] which contains the index proposed and its relation with the United States' economy.
